fix: remove body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   height: 100vh;
   background: #0A0C10;
+  overflow: hidden;
 }
 
 img, svg {
